--- a/public/stylesheets/mobile/main.css
+++ b/public/stylesheets/mobile/main.css
@@ -179,7 +179,7 @@ a {
     width: 100%;
     margin-top: 18px;
     text-align: center;
-    word-spacing: -4px;
+    /*word-spacing: -4px;*/
 }
 
 .footer .item {
